--- a/requirements.txt
+++ b/requirements.txt
@@ -21,9 +21,15 @@ Jinja2==2.11.2
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.4
-numpy==1.20.1
+# numpy==1.20.1
+# pandas==1.2.2
+# scipy==1.6.0
+
+numpy==1.23.5 --only-binary :all:
+pandas==1.5.3 --only-binary :all:
+scipy==1.9.3 --only-binary :all:
+
 packaging==20.9
-pandas==1.2.2
 Pillow==8.1.0
 plotly==4.14.3
 pluggy==0.13.1
@@ -36,9 +42,12 @@ python-dateutil==2.8.1
 pytz==2021.1
 requests==2.25.1
 retrying==1.3.3
-scipy==1.6.0
 seaborn==0.11.1
 six==1.15.0
 toml==0.10.2
 urllib3==1.26.3
 Werkzeug==1.0.1
+gunicorn==23.0.0
+mysqlclient==2.2.7
+packaging==24.2
+
