--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 atomicwrites==1.4.0
 attrs==21.2.0
 bcrypt==3.2.0
-blinker==1.9.0
+blinker
 branca==0.4.2
 certifi==2020.12.5
-cffi==1.14.3
+cffi
 chardet==4.0.0
 click==7.1.2
 colorama==0.4.4
