--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ click==7.1.2
 colorama==0.4.4
 cycler==0.10.0
 Flask==1.1.2
-Flask-Mail==0.9.1
+Flask-Mail
 Flask-MySQLdb==0.2.0
 Flask-Scss==0.5
 folium==0.12.1
