--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,26 @@
 atomicwrites==1.4.0
-attrs==21.2.0
-bcrypt==3.2.0
-blinker
-branca==0.4.2
-certifi==2020.12.5
-cffi
-chardet==4.0.0
-click==7.1.2
-colorama==0.4.4
-cycler==0.10.0
-Flask==1.1.2
-Flask-Mail
-Flask-MySQLdb==0.2.0
+attrs==23.2.0
+bcrypt==4.1.2
+blinker==1.9.0
+branca==0.7.1
+certifi==2024.2.2
+cffi==1.17.1
+chardet==5.2.0
+click==8.1.7
+colorama==0.4.6
+cycler==0.12.1
+Flask==2.2.5
+Flask-Mail==0.10.0
+Flask-MySQLdb==1.0.2
 Flask-Scss==0.5
-folium==0.12.1
-idna==2.10
-iniconfig==1.1.1
-itsdangerous==1.1.0
-Jinja2==2.11.2
-kiwisolver==1.3.1
-MarkupSafe==1.1.1
-matplotlib==3.3.4
+folium==0.15.0
+idna==3.6
+iniconfig==2.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.3
+kiwisolver==1.4.5
+MarkupSafe==2.1.5
+matplotlib==3.8.3
 # numpy==1.20.1
 # pandas==1.2.2
 # scipy==1.6.0
@@ -29,25 +29,24 @@ numpy==1.23.5 --only-binary :all:
 pandas==1.5.3 --only-binary :all:
 scipy==1.9.3 --only-binary :all:
 
-packaging==20.9
-Pillow==8.1.0
-plotly==4.14.3
-pluggy==0.13.1
-py==1.10.0
-pycparser==2.20
-pyparsing==2.4.7
-pyScss==1.3.7
-pytest==6.2.4
-python-dateutil==2.8.1
-pytz==2021.1
-requests==2.25.1
-retrying==1.3.3
-seaborn==0.11.1
-six==1.15.0
+packaging==24.2
+Pillow==10.2.0
+plotly==5.19.0
+pluggy==1.4.0
+py==1.11.0
+pycparser==2.21
+pyparsing==3.1.2
+pyScss==1.4.2
+pytest==8.0.2
+python-dateutil==2.9.0
+pytz==2024.1
+requests==2.31.0
+retrying==1.3.4
+seaborn==0.13.2
+six==1.16.0
 toml==0.10.2
-urllib3==1.26.3
-Werkzeug==1.0.1
-gunicorn==23.0.0
+urllib3==2.2.1
+Werkzeug==3.0.1
+gunicorn==21.2.0
 mysqlclient==2.2.7
 packaging==24.2
-
