--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,8 @@ pluggy==1.4.0
 py==1.11.0
 pycparser==2.21
 pyparsing==3.1.2
-pyScss==1.3.7
+# pyScss==1.3.7
+git+https://github.com/Kronuz/pyScss.git
 pytest==8.0.2
 python-dateutil==2.9.0
 pytz==2024.1
